--- a/style.css
+++ b/style.css
@@ -5,6 +5,87 @@
 *{
     margin: 0;
     padding: 0;
+    list-style: none;
+    text-decoration: none;
+
+}
+
+:root{
+    --font-primary: "Baloo Da 2", serif;
+    --font-secundary: "Josefin Slab", serif;
+    --font-action: "Muli", serif;
+}
+
+.options {
+    /*background-color: red;*/
+    width: 2rem;
+    height: 2rem;
+    position: fixed;
+    z-index: 100;
+    right: 2rem;
+    top: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    cursor:pointer;
+}
+
+.options span {
+    position: absolute;
+    left: 3rem;
+    height: 2rem;
+    width: 6rem;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    background-color: rgb(128, 4, 139);
+    align-items: center;
+    color: white;
+    font-family: var(--font-action);
+    opacity: 0;
+
+}
+
+.options span::before{
+    content: "";
+
+    position: absolute;
+    border-right: .5rem solid rgb(128, 4, 139);
+    border-top: .5rem solid transparent;
+    border-left: .5rem solid transparent;
+    border-bottom: .5rem solid transparent;
+    left: -1rem;
+}
+
+.show-menu .options {
+    right: 16.5rem;
+}
+
+.show-menu .options:hover span {
+    opacity: 1;
+}
+
+.line {
+    width: 100%;
+    background-color: white;
+    height: .1rem ;
+    box-shadow: 0.1rem 0.1rem 1px black;
+    transition: 1s;
+}
+
+.show-menu #line1 {
+    transform: translate(.4rem, .4rem) rotate(45deg);
+    background-color: black;
+    box-shadow: none;
+}
+.show-menu #line2 {
+    opacity: 0;
+    visibility: hidden;
+}
+.show-menu #line3 {
+    transform: translate(.3rem, -.55rem) rotate(-45deg);
+    background-color: black;
+    box-shadow: none;
 }
 
 header{
@@ -27,7 +108,7 @@ header{
     height: 100%;
     object-fit: cover;
     opacity: 0.5;
-    animation: zoom 25s;
+    animation: zoom 30s;
 }
 
 @keyframes zoom {
@@ -48,7 +129,7 @@ header{
 .banner h1 {
     color: #fff;
     font-size: 3.5rem;
-    font-family: "Baloo Da 2", serif;
+    font-family: var(--font-primary);
     font-weight: 200;
     text-shadow: 0.2rem 0.3rem 2px rgba(0,0,0,.4);
     line-height: 3.5rem;
@@ -58,7 +139,7 @@ header{
 }
 
 .banner p {
-    font-family: "Josefin Slab", serif;
+    font-family: var(--font-secundary);
     color: #fff;
     font-size: 2rem;
     text-shadow: 0.2rem 0.2rem rgba(0,0,0,.4);
@@ -68,7 +149,7 @@ header{
 }
 
 .banner button {
-    font-family: "Muli", serif;
+    font-family: var(--font-action);
     color: #fff;
     text-transform: uppercase;
     letter-spacing: .1rem;
@@ -95,4 +176,69 @@ header{
         transform: translateY(0) rotateY(0);
         opacity: 1;
     }
+}
+
+.sidebar{
+    width: 20rem;
+    height: 100vh;
+    background-color: #fff;
+    position: fixed;
+    top:0;
+    right:-20rem;
+    transition: all 1s;
+
+}
+
+.show-menu .sidebar {
+    right: 0;
+}
+
+.menu {
+    postion: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(0%, 90%);
+}
+
+.menu-item {
+    text-align: center;
+    margin-bottom: .5rem;
+}
+
+.menu-link {
+    font-family: var(--font-action);
+    font-size: 2rem;
+    color: rgb(63, 63, 63);
+    transition: color 1s;
+    
+}
+
+.menu-link:hover {
+    color: indigo;
+}
+
+.social-media {
+    position: absolute;
+    bottom: 2rem;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+
+}
+
+.social-media i {
+    background-color:rgb(128, 4, 139);
+    color: #fff;
+    height: 2.5rem;
+    width: 2.5rem;
+    font-size: 1.75rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    transition: background-color 1s;
+}
+
+.social-media i:hover {
+    background-color: rgb(255, 0, 200);
 }
